task1/test_results_no_defects/infer_test/wrong_arguments_func_pointer/report.txt
#0
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/02.wo_Defects/wrong_arguments_func_pointer.c:354: error: Memory Leak
  Pulse found a potential memory leak. Memory dynamically allocated at line 346 by call to `malloc`, is not freed after the last access at line 354, column 2.
  352. 	void (*fptr1)(wrong_arguments_func_pointer_012_s_001,wrong_arguments_func_pointer_012_s_001 *);
  353. 	fptr1 = wrong_arguments_func_pointer_012_func_002;
  354. 	fptr1(st,st1);
        ^
  355. 
  356. 	void (*fptr2)(wrong_arguments_func_pointer_012_s_001 *,int);

#1
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/02.wo_Defects/wrong_arguments_func_pointer.c:594: error: Memory Leak
  Pulse found a potential memory leak. Memory dynamically allocated at line 586 by call to `malloc`, is not freed after the last access at line 594, column 2.
  592. 	void (*fptr3)(wrong_arguments_func_pointer_018_s_001 st,wrong_arguments_func_pointer_018_s_001* st1);
  593. 	fptr3 = wrong_arguments_func_pointer_018_func_004;
  594. 	fptr3(st,st1);
        ^
  595. }
  596. 

Found 2 issues
  Issue Type(ISSUED_TYPE_ID): #
    Memory Leak(MEMORY_LEAK): 2
